--- a/index.html
+++ b/index.html
@@ -17,30 +17,7 @@
 		</div>
 	</div>
 </div>
-
-<br>
-<div class="grid vlayout test">
-	<div class="row unflex hlayout">
-		<div class="column unflex">1</div>
-		<div class="column unflex"></div>
-		<div class="column unflex"></div>
-	</div>
-	<div class="row unflex hlayout">
-		<div class="column unflex">2</div>
-		<div class="column unflex"></div>
-		<div class="column unflex"></div>
-	</div>
-	<div class="row unflex hlayout">
-		<div class="column unflex">3</div>
-		<div class="column unflex"></div>
-		<div class="column unflex"></div>
-	</div>
-</div>
-
-使用div进行布局，无法实现单元格合并！
-<script src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
-<script src="http://cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.16/angular.js"></script>
-
+<script src="bower_components/angular/angular.min.js"></script>
 <script src="grid.js"></script>
 </body>
 </html>
